--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -20,7 +20,9 @@
 </head>
 
 <body>
+  
   <app-root></app-root>
+
 </body>
 
 </html>
